<resources>
    <string name="app_name">sawithub</string>
    <string name="logo_sawithub">logo sawithub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_statement">Belum punya akun?</string>
    <string name="signup_statement">Sudah punya akun?</string>
    <string name="copyright">copyright2023 - sawithub</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="nama">nama</string>
    <string name="password">password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="email_hint">input your email</string>
    <string name="name_hint">input your name</string>
    <string name="password_hint">input your password</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_scan">Scan</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="signup">Sign Up</string>
    <string name="Edit_profil">Edit Profil</string>
    <string name="tambahkan_profil">Tambahkan Foto</string>
    <string name="username">Yusrian Asghany</string>
    <string name="user_email">Yusrian@gmail.com</string>
    <string name="number_phone">081732155538900</string>
    <string name="simpan">Simpan</string>
    <string name="produk_home">Produk Obat Yang Dicari</string>
    <string name="gambar_bacaan">gambar bacaan</string>
    <string name="foto_hasil_scan">foto hasil scan</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="sari_roti">Sari Roti</string>
    <string name="jenis_penyakit">Jenis Penyakit</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="rekomendasi_penanganan">Rekomendasi Penanganan</string>
    <string name="lorem_ipsum">Loreim inpsum de natanle djendned</string>
    <string name="spasi">:</string>
    <string name="scan_ulang">Scan Ulang</string>
    <string name="konsul">Konsul</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="scan">Scan</string>
    <string name="preview_image">preview image</string>
    <string name="Logout">LOGOUT</string>
    <string name="title_konsul">Riwayat Konsul</string>
    <string name="obat_daun_kelapa_sawit">Obat Daun Kelapa Sawit</string>
    <string name="belum_terdeteksi">Belum Terdeteksi</string>
    <string name="edit_foto">Edit Foto</string>

    <string-array name="name_artikel">
        <item>Tips Cara Tanam Sawit Yang Baik Dan Benar</item>
        <item>Cara Merawat Kelapa Sawit agar Berbuah Banyak</item>
        <item>Supaya Tanaman Kelapa Sawit Subur, Ini Tips Ala Petani Desa</item>
        <item>Cara Merawat Sawit Tanpa Pupuk</item>
        <item>7 Cara Memelihara Kelapa Sawit Agar Berbuah Banyak</item>
    </string-array>

    <string-array name="img_artikel">
        <item>https://disbun.kaltimprov.go.id/upload/artikel/medium_115884petani-sawit-kutim.JPG</item>
        <item>https://pkt-group.com/sawitnotif/wp-content/uploads/2022/02/58d25e52a9feaa998f13c7911aeb2ed3-1.jpg</item>
        <item>https://rakyatempatlawang.disway.id/upload/f86bbc6af541193cc0ef05ff740c37fb.jpg</item>
        <item>https://komitmeniklim.id/wp-content/uploads/2021/05/Sawit-Bukan-Penyebab-Deforestasi.jpg</item>
        <item>https://globalplanet.news/uploads/posts/20201118091023download-1.jpg</item>
    </string-array>

    <string-array name="url_artikel">
        <item>https://disbun.kaltimprov.go.id/artikel/tips-cara-tanam-sawit-yang-baik-dan-benar</item>
        <item>https://pkt-group.com/sawitnotif/cara-merawat-kelapa-sawit-agar-berbuah-banyak/</item>
        <item>https://rakyatempatlawang.disway.id/read/640055/supaya-tanaman-kelapa-sawit-subur-ini-tips-ala-petani-desa</item>
        <item>https://sinautani.com/cara-merawat-sawit-tanpa-pupuk/</item>
        <item>http://globalplanet.news/ekbis/30252/7-cara-memelihara-kelapa-sawit-agar-berbuah-banyak</item>
    </string-array>
</resources>