<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.EditProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_account_circle_grey"
        />

    <TextView
        android:id="@+id/tv_tambahkan_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambahkan_profil"
        android:textColor="@color/green_400"
        android:gravity="center"
        android:layout_marginTop="10dp"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/nama"
        />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="5dp"
        android:fontFamily="@font/lato"
        android:hint="@string/name_hint"
        android:padding="12dp"
        android:textSize="14sp"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        />

    <EditText
        android:id="@+id/input_email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="5dp"
        android:fontFamily="@font/lato"
        android:hint="@string/email_hint"
        android:padding="12dp"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        />

    <EditText
        android:id="@+id/input_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="5dp"
        android:fontFamily="@font/lato"
        android:hint="@string/password_hint"
        android:padding="12dp"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/lato_bold"
        android:padding="10dp"
        android:text="@string/simpan"
        />

</LinearLayout>