<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginFragment">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="45dp"
        android:fontFamily="@font/lato"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/input_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:fontFamily="@font/lato"
        android:textSize="14sp"
        android:padding="12dp"
        android:background="@drawable/custom_input"
        android:hint="@string/email_hint"
        android:layout_marginHorizontal="45dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="45dp"
        android:fontFamily="@font/lato"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/input_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:fontFamily="@font/lato"
        android:background="@drawable/custom_input"
        android:textSize="14sp"
        android:padding="12dp"
        android:hint="@string/password_hint"
        android:layout_marginHorizontal="45dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_marginHorizontal="45dp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato"
        android:textSize="12sp"
        android:text="@string/lupa_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:background="@drawable/custom_input"
        android:padding="10dp"
        android:layout_marginHorizontal="45dp"
        android:text="@string/login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:textColor="@color/black"
            android:text="@string/login_statement" />

        <TextView
            android:id="@+id/text_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:textColor="@color/green_400"
            android:textStyle="bold"
            android:paddingStart="5dp"
            android:text="@string/daftar"
            />
    </LinearLayout>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        android:gravity="center|bottom"
        android:text="@string/copyright"
        android:fontFamily="@font/lato"
        android:textColor="@color/black"
        />
</LinearLayout>